# spellbook-ingredients

./: .gitignore  README.md  pyproject.toml
spellbook_ingredients/: dump_spellbook_resources_to_csv.py  main.py  write_to_dune.py
