[tool.poetry]
name = "spellbook-ingredients"
version = "0.1.0"
description = "Gets tables used by Spellbook and writes them to Dune via API."
authors = ["antonio-mendes <soeiromendes.antonio@gmail.com>"]
readme = "README.md"
packages = [{include = "spellbook_ingredients"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
